@@ -18,6 +18,7 @@ Version 0.4s
 * Fuckton of typos fixed
 * Maria got some new talk topics, and ranger training. Written by The Observer
 * A new combat encounter added to the Highlands. Written by The Observer
+* Fixed a pregnancy bug that'd make butt-pregs behave really weird. Pregnancy stage messages should work as intended now
 
 --------------------------------------------
              PREVIOUS VERSIONS
